# hs-word2vec

./: .gitignore  .gitmodules  Crawl.hs  Display.hs  Huffman.hs  LICENSE  Matrix.hs  Model.hs  README.md  Window.hs  Words.hs  analyze.hs  stack.yaml  word2vec-test.hs  word2vec.cabal  word2vec.hs
bench/: MainBenchmark.hs  PCABench.hs
main/: analyze.hs  arxiv.hs  word2vec.hs
src/: Concurrent.hs  Crawl.hs  Display.hs  Huffman.hs  Log.hs  Model.hs  PCA.hs  Step.hs  Window.hs  Words.hs
src/Model/: Array.hs  IO.hs  Model.hs  Repa.hs  Types.hs
src/Words/: Dictionary.hs
test/: PCASpec.hs  word2vec-test.hs
