Name:                 word2vec
Version:              0.1
Build-type:           Simple
Synopsis:             A partial and unverified Haskell port of C word2vec
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly
Maintainer:           Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.20

Library
  Build-Depends: base,
                 hmatrix ,
                 hmatrix-nipals ,
                 heap ,
                 utf8-string ,
                 containers ,
                 regex-tdfa ,
                 tokenize ,
                 random ,
                 array ,
                 time ,
                 process ,
                 unix ,
                 repa,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 network ,
                 HTTP ,
                 directory ,
                 Chart ,
                 Chart-diagrams ,
                 lens ,
                 network-uri ,
                 colour ,
                 data-default-class,
                 unordered-containers
  hs-source-dirs:     src
  exposed-modules: Display, Model, Words, Crawl
  other-modules: Concurrent, Huffman, Window
  ghc-options:        -Wall -threaded -rtsopts -O3 -fexcess-precision

Executable words
  main-is: word2vec.hs
  hs-source-dirs: main
  build-depends: word2vec,
                 directory ,
                 Chart ,
                 Chart-diagrams ,
                 base,
                 unix ,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 HTTP, network-uri , network
  ghc-options:        -Wall -threaded -rtsopts -O3

Executable crawl
  Build-Depends: word2vec,
                 base,
                 process ,
                 unix ,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 HTTP, network-uri , network

  hs-source-dirs:     main
  main-is:            arxiv.hs
  ghc-options:        -Wall -threaded -rtsopts -O3

Test-Suite word2vec-test
     type:          exitcode-stdio-1.0
     hs-source-dirs:     test
     main-is:       word2vec-test.hs
     build-depends: base, doctest, word2vec