Name:                 word2vec
Version:              0.1
Build-type:           Simple
Synopsis:             A partial and unverified Haskell port of C word2vec
License:              BSD3
License-file:         LICENSE
Author:               Arnaud Bailly
Maintainer:           Arnaud Bailly <arnaud.oqube@gmail.com>
Cabal-version:        >= 1.20

Library
  Build-Depends: base, mtl, aeson,
                 hmatrix ,
                 hmatrix-nipals ,
                 heap ,
                 utf8-string ,
                 containers ,
                 regex-tdfa ,
                 tokenize ,
                 random ,
                 array ,
                 time ,
                 process ,
                 unix ,
                 repa,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 network ,
                 HTTP ,
                 directory ,
                 Chart ,
                 Chart-diagrams ,
                 lens ,
                 network-uri ,
                 colour ,
                 data-default-class,
                 unordered-containers,
                 subhask
  hs-source-dirs:     src
  exposed-modules: Display, Model, Words, Crawl, Log
  other-modules: Concurrent, Huffman, Window
  ghc-options:        -Wall -threaded -rtsopts -O3 -fexcess-precision -fprof-auto

Executable words
  main-is: word2vec.hs
  hs-source-dirs: main
  default-language: Haskell2010
  build-depends: word2vec,
                 directory ,
                 Chart , aeson,
                 Chart-diagrams ,
                 base, mtl,
                 unix ,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 HTTP, network-uri , network
  ghc-options:        -Wall -threaded -rtsopts -O3 -fprof-auto

Executable crawl
  default-language: Haskell2010
  Build-Depends: word2vec,
                 base, mtl,
                 process ,
                 unix ,
                 filepath ,
                 bytestring ,
                 tagsoup ,
                 http-conduit ,
                 HTTP, network-uri , network

  hs-source-dirs:     main
  main-is:            arxiv.hs
  ghc-options:        -Wall -threaded -rtsopts -O3

Test-Suite word2vec-test
  default-language: Haskell2010
  type:          exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:       word2vec-test.hs
  build-depends: base, doctest, word2vec
